[gd_scene load_steps=20 format=2]

[ext_resource path="res://Cenas/minigame/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cenas/minigame/ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/minigame/bot.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cenas/minigame/levelPong.gd" type="Script" id=4]
[ext_resource path="res://Cenas/main/score.gd" type="Script" id=5]
[ext_resource path="res://assets/Font/8-BIT WONDER.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://assets/sounds/smb_1-up.wav" type="AudioStream" id=7]

[sub_resource type="GradientTexture2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 513.25, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 79.5, 334.75 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[sub_resource type="MeshTexture" id=7]

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/Font/8-BIT WONDER.TTF"

[sub_resource type="DynamicFont" id=5]
use_mipmaps = true
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://assets/Font/8-BIT WONDER.TTF"

[sub_resource type="DynamicFont" id=12]
font_data = SubResource( 11 )

[sub_resource type="AudioStreamMP3" id=8]

[sub_resource type="Animation" id=9]
resource_name = "promotion!"
tracks/0/type = "value"
tracks/0/path = NodePath("Promotion:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 384, 40 ), Vector2( 384, 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Promotion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 2.14355 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": SubResource( 8 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( -0.1, 0.1 )
}

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 6 )

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 513.5, 300.5 )
scale = Vector2( 16.0156, 9.42188 )
texture = SubResource( 1 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 14, 273 )

[node name="WallButton" type="StaticBody2D" parent="."]
position = Vector2( 1, 623 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallButton"]
position = Vector2( 517, -14 )
shape = SubResource( 2 )

[node name="WallTop" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 518, -10 )
shape = SubResource( 2 )

[node name="ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 521, 284 )

[node name="bot" parent="." instance=ExtResource( 3 )]
position = Vector2( 968, 275 )

[node name="right" type="Area2D" parent="."]
position = Vector2( 1117, 305 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="right"]
position = Vector2( 0, 1 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="left" type="Area2D" parent="."]
position = Vector2( -78, 302 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="left"]
position = Vector2( 0, 1 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="."]
margin_left = 896.0
margin_top = 16.0
margin_right = 1012.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 6 )
text = "EXIT"
icon = SubResource( 7 )

[node name="score" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 72.0
margin_bottom = 40.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "COIN:"
script = ExtResource( 5 )

[node name="Boost" type="Label" parent="."]
margin_left = 136.0
margin_top = 24.0
margin_right = 160.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 12 )
text = "1x"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/promotion! = SubResource( 9 )

[node name="Promotion" type="Label" parent="."]
anchor_bottom = 0.012
margin_left = 384.0
margin_top = 40.0
margin_right = 648.0
margin_bottom = 48.8
custom_fonts/font = SubResource( 10 )
text = "Voce Foi Promovido"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="right" to="." method="_on_right_body_entered"]
[connection signal="body_entered" from="left" to="." method="_on_left_body_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
